[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/UntitledValley/Enemy/Snack/Animation/Frames.tres" type="SpriteFrames" id=1]
[ext_resource path="res://Scenes/UntitledValley/Enemy/Snack/Scripts/Snack.gd" type="Script" id=2]
[ext_resource path="res://Scenes/UntitledValley/Enemy/Snack/Object/Duye/Duye.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 70.7107

[sub_resource type="CircleShape2D" id=2]
radius = 800.0

[node name="Snack" type="KinematicBody2D"]
scale = Vector2( 0.5, 0.5 )
collision_layer = 4
collision_mask = 9
script = ExtResource( 2 )
duye = ExtResource( 3 )

[node name="SnackShape" type="CollisionShape2D" parent="."]
position = Vector2( 0, -10 )
shape = SubResource( 1 )

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 2

[node name="AttackAreaShape" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource( 2 )

[node name="Animation" type="AnimatedSprite" parent="."]
frames = ExtResource( 1 )
animation = "idle"

[node name="AttackHardTimer" type="Timer" parent="."]
one_shot = true

[node name="AttackNepTimer" type="Timer" parent="."]
wait_time = 1.3
one_shot = true

[node name="AttackedHardTimer" type="Timer" parent="."]
wait_time = 0.35
one_shot = true
[connection signal="body_entered" from="AttackArea" to="." method="_on_AttackArea_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_AttackArea_body_exited"]
[connection signal="timeout" from="AttackHardTimer" to="." method="_on_AttackHardTimer_timeout"]
[connection signal="timeout" from="AttackNepTimer" to="." method="_on_AttackNepTimer_timeout"]
[connection signal="timeout" from="AttackedHardTimer" to="." method="_on_AttackedHardTimer_timeout"]
